# cmra

./: .gitignore  CHANGELOG.md  GUIDE.md  README.md  build.bat  cmra.bat  cmra.ps1  cmra.spec  cmrash.py  guide.html  index.html  playground.html  pyproject.toml  styles.css
cmra-vscode-extension/: .vscodeignore  ERROR_MESSAGES.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
cmra-vscode-extension/snippets/: snippets.json
cmra-vscode-extension/src/: extension.ts
cmra-vscode-extension/syntaxes/: cmra.tmLanguage.json
projects/: calculator.cmra
src/cmra/: __init__.py  __main__.py  cli.py  fire.py  repl.py  runner.py  shadow.py  shadow_cli.py
test cases cmra/: test_cond.cmra
test cases cmrash/: test.cmrash  test_arith.cmrash  test_block.cmrash  test_cond.cmrash  test_strings.cmrash
